# cloud-computing

./: DOCUMENTATION.md  PROPOSAL.md  README.md  architecture.drawio  coredns_configmap.yaml  deployment.sh  ingress.yaml  ingress_gcloud.yaml  ingress_local.yaml  local_deployment.sh
.github/workflows/: CI.yml
microservices/: commands.txt  deployment.yaml  namespace.yaml
microservices/binary/: Dockerfile  deployment.yaml  pom.xml
microservices/binary-rs/: Cargo.toml  Dockerfile  deployment.yaml
microservices/binary-rs/src/: main.rs
microservices/binary/src/main/java/com/example/: BinaryResource.java  Main.java  MainService.java
microservices/echo/: Dockerfile  app.py  deployment.yaml
microservices/main/: README.md  deployment.yaml  main.py  requirements.txt
microservices/math/: Dockerfile  app.py  deployment.yaml  requirements.txt
microservices/stress/: Dockerfile  app.py  deployment.yaml  deployment_local.yaml  local_lb.yaml  requirements.txt  vpa.yaml
microservices/time/: app.py  deployment.yaml  requirements.txt
resources/: architecture.drawio
src/bot/: .gitignore  Dockerfile  README.md  deployment.yaml  main.py  pod.yaml  requirements.txt
