[package]
name = "binary-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.6"
reqwest = { version = "0.11.9", features = ["blocking"] }
rocket = "0.5.0-rc.1"
#tokio = { version = "1", features = ["full"] }